--- a/index.html
+++ b/index.html
@@ -25,23 +25,23 @@
         </nav>
     </header>
 
-    <!-- Hero Section with Fullscreen YouTube Video -->
-    <section class="hero">
-        <div class="video-background">
-            <iframe 
-                src="https://www.youtube.com/embed/t9-cMiEDNyk?autoplay=1&mute=1&loop=1&playlist=t9-cMiEDNyk" 
-                frameborder="0" 
-                allow="autoplay; encrypted-media" 
-                allowfullscreen 
-                id="bg-video">
-            </iframe>
-        </div>
-        <div class="hero-content">
-            <h1>Drive Your Success with Canada's #1 Premium Car Marketing Agency</h1>
-            <p>Reach buyers faster using our advanced geolocation database.</p>
-            <a href="#contact" class="cta-btn">Start Selling Today</a>
-        </div>
-    </section>
+   <!-- Hero Section with Fullscreen YouTube Video -->
+<section class="hero">
+    <div class="video-background">
+        <iframe 
+            src="https://www.youtube.com/embed/t9-cMiEDNyk?autoplay=1&mute=1&loop=1&playlist=t9-cMiEDNyk&start=20" 
+            frameborder="0" 
+            allow="autoplay; encrypted-media" 
+            allowfullscreen 
+            id="bg-video">
+        </iframe>
+    </div>
+    <div class="hero-content">
+        <h1>Drive Your Success with Canada's #1 Premium Car Marketing Agency</h1>
+        <p>Reach buyers faster using our advanced geolocation database.</p>
+        <a href="#contact" class="cta-btn">Start Selling Today</a>
+    </div>
+</section>
 
     <!-- About Section -->
     <section id="about" class="section">
