--- a/index.html
+++ b/index.html
@@ -28,13 +28,13 @@
    <!-- Hero Section with Fullscreen YouTube Video -->
 <section class="hero">
     <div class="video-background">
-        <iframe 
-            src="https://www.youtube.com/embed/t9-cMiEDNyk?autoplay=1&mute=1&loop=1&playlist=t9-cMiEDNyk&start=20" 
-            frameborder="0" 
-            allow="autoplay; encrypted-media" 
-            allowfullscreen 
-            id="bg-video">
-        </iframe>
+       <iframe 
+    src="https://www.youtube.com/embed/t9-cMiEDNyk?autoplay=1&mute=1&loop=1&playlist=t9-cMiEDNyk&start=20&controls=0&modestbranding=1&rel=0" 
+    frameborder="0" 
+    allow="autoplay; encrypted-media" 
+    allowfullscreen 
+    id="bg-video">
+</iframe>
     </div>
     <div class="hero-content">
         <h1>Drive Your Success with Canada's #1 Premium Car Marketing Agency</h1>
