--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="keywords" content="sell premium cars faster, car dealership marketing, geolocation-based ads for cars">
     <meta name="author" content="Buraleh & Co">
     <title>Buraleh & Co | Premium Car Marketing</title>
-    <link rel="icon" href="favicon.png" type="favicon.png">
+    <link rel="icon" href="favicon.png" type="image/png">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
 </head>
