--- a/index.html
+++ b/index.html
@@ -56,12 +56,14 @@
         </div>
     </section>
 
-    <!-- Geolocation Section -->
-    <section id="geolocation" class="section">
-        <h1>Car Buyer Database via Geolocating API</h1>
-        <p>Our advanced, data-driven SEO advertising strategy effectively targets nearby potential buyers, optimizing your chances for a successful sale.</p>
-        <p>Reach a targeted audience of qualified buyers, effectively showcasing your premium cars to those who matter most, all while optimizing your marketing spend for maximum ROI.</p>
-    </section>
+   <!-- Geolocation Section -->
+<section id="geolocation" class="section">
+    <h1>Car Buyer Database via Geolocating API</h1>
+    <p>Our advanced, data-driven SEO advertising strategy effectively targets nearby potential buyers, optimizing your chances for a successful sale.</p>
+    <p>Reach a targeted audience of qualified buyers, effectively showcasing your premium cars to those who matter most, all while optimizing your marketing spend for maximum ROI.</p>
+ <!-- Earth Animation -->
+    <div id="earth"></div> <!-- This will add the rotating Earth -->
+</section>
   
 <!-- Pricing Section -->
 <section id="pricing" class="section">
