--- a/index.html
+++ b/index.html
@@ -24,23 +24,22 @@
         </nav>
     </header>
 
-   <!-- Hero Section with Fullscreen YouTube Video -->
-<section class="hero">
-    <div class="video-background">
-       <iframe 
-    src="https://www.youtube.com/embed/t9-cMiEDNyk?autoplay=1&mute=1&loop=1&playlist=t9-cMiEDNyk&start=20&controls=0&modestbranding=1&rel=0" 
-    frameborder="0" 
-    allow="autoplay; encrypted-media" 
-    allowfullscreen 
-    id="bg-video">
-</iframe>
+  <div id="video-container" style="position: relative; width: 100%; height: 100vh;">
+    <!-- YouTube Video -->
+    <iframe 
+        src="https://www.youtube.com/embed/t9-cMiEDNyk?autoplay=1&mute=1&loop=1&playlist=t9-cMiEDNyk&start=20&controls=0&modestbranding=1&rel=0" 
+        frameborder="0" 
+        allow="autoplay; encrypted-media" 
+        allowfullscreen 
+        id="bg-video"
+        style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; object-fit: cover;">
+    </iframe>
+    
+    <!-- Transparent Overlay to block mouse interaction -->
+    <div id="video-overlay" 
+        style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; background: transparent; z-index: 2;">
     </div>
-    <div class="hero-content">
-        <h1>Drive Your Success with Canada's #1 Premium Car Marketing Agency</h1>
-        <p>Reach buyers faster using our advanced geolocation database.</p>
-        <a href="#contact" class="cta-btn">Start Selling Today</a>
-    </div>
-</section>
+  </div>
 
     <!-- About Section -->
     <section id="about" class="section">
