--- a/index.html
+++ b/index.html
@@ -26,10 +26,11 @@
 
   <div id="video-container" style="position: relative; width: 100%; height: 100vh;">
     <div id="video-container" style="position: relative; width: 100%; height: 100vh;">
+    <div id="video-container" style="position: relative; width: 100%; height: 100vh;">
     <!-- YouTube Video -->
     <iframe 
         id="bg-video"
-        src="https://www.youtube.com/embed/t9-cMiEDNyk?autoplay=1&mute=1&loop=1&playlist=t9-cMiEDNyk&start=20&controls=0&modestbranding=1&rel=0" 
+        src="https://www.youtube.com/embed/t9-cMiEDNyk?autoplay=1&mute=1&loop=1&playlist=t9-cMiEDNyk&start=30&controls=0&modestbranding=1&rel=0" 
         frameborder="0" 
         allow="autoplay; encrypted-media" 
         allowfullscreen 
@@ -41,6 +42,7 @@
         style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; background: transparent; z-index: 2;">
     </div>
 </div>
+
 
     <!-- About Section -->
     <section id="about" class="section">
