--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Sell your premium cars faster with targeted marketing and SEO">
-    <meta name="keywords" content="sell premium cars faster, car dealership marketing, geolocation-based ads for cars">
+    <meta name="description" content="Sell your premium cars faster with targeted marketing and SEO across Canada & the USA">
+    <meta name="keywords" content="sell premium cars faster, car dealership marketing, geolocation-based ads for cars in Canada and USA">
     <meta name="author" content="Buraleh & Co">
-    <title>Buraleh & Co | Premium Car Marketing</title>
+    <title>Buraleh & Co | Premium Car Marketing in Canada & USA</title>
     <link rel="icon" href="favicon.png" type="image/png">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
@@ -16,7 +16,7 @@
         <nav>
             <div class="logo"><a href="#about">Buraleh & Co</a></div>
             <ul>
-                <li><a href="#about">About</a></li>
+                <li><a href="#about">About Us (Canada & USA)</a></li>
                 <li><a href="#testimonials">Testimonials</a></li>
                 <li><a href="#geolocation">Geolocation</a></li>
                 <li><a href="#contact">Contact</a></li>
@@ -24,102 +24,132 @@
         </nav>
     </header>
 
-  <!-- Video Section -->
-  <div id="video-container" style="position: relative; width: 100%; height: 100vh;">
-   <!-- YouTube Video -->
-<iframe 
-    id="bg-video"
-    src="https://www.youtube.com/embed/t9-cMiEDNyk?autoplay=1&mute=1&loop=1&playlist=t9-cMiEDNyk&start=30&controls=0&modestbranding=1&rel=0" 
-    frameborder="0" 
-    allow="autoplay; encrypted-media" 
-    allowfullscreen 
-    style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; object-fit: cover;">
-</iframe>
+    <!-- Video Section -->
+    <div id="video-container" style="position: relative; width: 100%; height: 100vh;">
+        <!-- YouTube Video -->
+        <iframe 
+            id="bg-video"
+            src="https://www.youtube.com/embed/t9-cMiEDNyk?autoplay=1&mute=1&loop=1&playlist=t9-cMiEDNyk&start=30&controls=0&modestbranding=1&rel=0" 
+            frameborder="0" 
+            allow="autoplay; encrypted-media" 
+            allowfullscreen 
+            style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; object-fit: cover;">
+        </iframe>
 
-    <!-- Transparent Overlay to block mouse interaction -->
-    <div id="video-overlay" 
-        style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; background: transparent; z-index: 2;">
+        <!-- Transparent Overlay to block mouse interaction -->
+        <div id="video-overlay" style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; background: transparent; z-index: 2;"></div>
     </div>
-  </div>
 
     <!-- About Section -->
     <section id="about" class="section">
         <h1>Buraleh & Co</h1>
-        <p>Revolutionizing how premium cars are marketed and sold using our cutting-edge geolocation database. We are Canada's #1 Premium Car Marketing Agency, ensuring that your cars get in front of buyers more efficiently.</p>
+        <p>Revolutionizing the way premium cars are marketed and sold in Canada and the USA. As North America's #1 Premium Car Marketing Agency, we leverage cutting-edge geolocation and SEO strategies to connect your premium cars with buyers across both nations.</p>
     </section>
 
     <!-- Testimonials Section -->
     <section id="testimonials" class="section">
-        <h1>Testimonials</h1>
+        <h1>What Our Clients in Canada and the USA are Saying</h1>
         <div class="testimonials-carousel-container">
-            <div class="testimonials-slider"></div>
+            <div class="testimonials-slider">
+                <!-- Example of localized testimonials -->
+                <div class="testimonial">
+                    <p>"Thanks to Buraleh & Co, our car sales in Toronto have increased by 40%. Their targeted marketing strategy works!" – John Doe, Toronto, Canada</p>
+                </div>
+                <div class="testimonial">
+                    <p>"Incredible ROI from their geolocation-based ads. We're now reaching more buyers in California than ever before." – Jane Smith, Los Angeles, USA</p>
+                </div>
+            </div>
         </div>
     </section>
 
-   <!-- Geolocation Section -->
-<section id="geolocation" class="section">
-    <h1>Car Buyer Database via Geolocating API</h1>
-    <p>Our advanced, data-driven SEO advertising strategy effectively targets nearby potential buyers, optimizing your chances for a successful sale.</p>
-    <p>Reach a targeted audience of qualified buyers, effectively showcasing your premium cars to those who matter most, all while optimizing your marketing spend for maximum ROI.</p>
-</section>
-  
-<!-- Pricing Section -->
-<section id="pricing" class="section">
-    <h1>Pricing Plans</h1>
-    <p>Choose the plan that best suits your car sales business. Each package is designed to help you sell more cars with targeted marketing, SEO, and more.</p>
+    <!-- Geolocation Section -->
+    <section id="geolocation" class="section">
+        <h1>Targeted Car Buyer Database Across Canada & USA</h1>
+        <p>Our geolocation-driven SEO strategy effectively targets buyers within your area, whether you're in bustling cities like Toronto or Los Angeles, or any region in between. We use cutting-edge data to connect you with potential buyers in Canada and the USA, optimizing your marketing strategy for maximum reach and results.</p>
+    </section>
 
-    <div class="pricing-plans">
-        <!-- Basic Plan -->
-        <div class="pricing-plan">
-            <h2>Basic</h2>
-            <p class="price">$500/month</p>
-            <ul>
-                <li>Geolocation-based ad targeting</li>
-                <li>SEO optimization for car listings</li>
-                <li>Customer lead generation tools</li>
-                <li>Email marketing campaign support</li>
-            </ul>
-            <p>Car Salesman Plan</p>
-        </div>
+    <!-- Pricing Section -->
+    <section id="pricing" class="section">
+        <h1>Pricing Plans</h1>
+        <p>Choose the plan that best suits your car sales business, whether you're located in Canada or the USA. Each package is designed to help you sell more cars through targeted marketing, SEO, and more.</p>
 
-        <!-- Premium Plan -->
-        <div class="pricing-plan">
-            <h2>Premium</h2>
-            <p class="price">$1000/month</p>
-            <ul>
-                <li>All Basic Plan features including:</li>
-                <li>Advanced geolocation </li>
-                <li>Social media advertising </li>
-                <li>Priority customer support</li>
-                <li>Monthly performance reviews</li>
-            </ul>
-            <p>Car Salesman Plan</p>
-        </div>
+        <div class="pricing-plans">
+            <!-- Basic Plan -->
+            <div class="pricing-plan">
+                <h2>Basic</h2>
+                <p class="price">$500 USD/month (or $650 CAD/month)</p>
+                <ul>
+                    <li>Geolocation-based ad targeting</li>
+                    <li>SEO optimization for car listings</li>
+                    <li>Customer lead generation tools</li>
+                    <li>Email marketing campaign support</li>
+                </ul>
+                <p>Car Salesman Plan</p>
+            </div>
 
-        <!-- Enterprise Plan -->
-        <div class="pricing-plan">
-            <h2>Enterprise</h2>
-            <p class="price">Custom Pricing</p>
-            <ul>
-                <li>All Premium Plan features including:</li>
-                <li>Custom marketing strategies for your business</li>
-                <li>Full digital marketing support </li>
-                <li>Comprehensive competitor analysis</li>
-                <li>Advanced reporting & analytics</li>
-                <li>Dedicated account manager</li>
-            </ul>
-            <p>Dealership Plan</p>
+            <!-- Premium Plan -->
+            <div class="pricing-plan">
+                <h2>Premium</h2>
+                <p class="price">$1000 USD/month (or $1300 CAD/month)</p>
+                <ul>
+                    <li>All Basic Plan features including:</li>
+                    <li>Advanced geolocation</li>
+                    <li>Social media advertising</li>
+                    <li>Priority customer support</li>
+                    <li>Monthly performance reviews</li>
+                </ul>
+                <p>Car Salesman Plan</p>
+            </div>
+
+            <!-- Enterprise Plan -->
+            <div class="pricing-plan">
+                <h2>Enterprise</h2>
+                <p class="price">Custom Pricing</p>
+                <ul>
+                    <li>All Premium Plan features including:</li>
+                    <li>Custom marketing strategies for your business</li>
+                    <li>Full digital marketing support</li>
+                    <li>Comprehensive competitor analysis</li>
+                    <li>Advanced reporting & analytics</li>
+                    <li>Dedicated account manager</li>
+                </ul>
+                <p>Dealership Plan</p>
+            </div>
         </div>
-    </div>
-</section>
+    </section>
 
     <!-- Car Makes Sold Section -->
     <section id="car-makes-sold" class="section">
-        <h1>Car Makes Sold</h1>
+        <h1>Car Makes Sold Across Canada & USA</h1>
         <div class="car-makes-carousel-container">
             <div class="car-makes-slider"></div>
         </div>
     </section>
+
+  <!-- Cities Carousel Section -->
+<section id="cities" class="section">
+    <h2>Our Service Cities</h2>
+    <div class="cities-carousel-container">
+        <div class="cities-slider">
+            <div class="city">
+                <h3>New York</h3>
+            </div>
+            <div class="city">
+                <h3>Los Angeles</h3>
+            </div>
+            <div class="city">
+                <h3>Chicago</h3>
+            </div>
+            <div class="city">
+                <h3>Houston</h3>
+            </div>
+            <div class="city">
+                <h3>Miami</h3>
+            </div>
+        </div>
+    </div>
+</section>
+
 
     <!-- Contact Section -->
     <section id="contact" class="section">
