--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="description" content="Sell your premium cars faster with targeted marketing and SEO across Canada & the USA">
     <meta name="keywords" content="sell premium cars faster, car dealership marketing, geolocation-based ads for cars in Canada and USA">
     <meta name="author" content="Buraleh & Co">
-    <title>Buraleh & Co | Premium Car Marketing in Canada & USA</title>
+    <title>Buraleh & Co | Premium Car Marketing</title>
     <link rel="icon" href="favicon.png" type="image/png">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
@@ -16,7 +16,7 @@
         <nav>
             <div class="logo"><a href="#about">Buraleh & Co</a></div>
             <ul>
-                <li><a href="#about">About Us (Canada & USA)</a></li>
+                <li><a href="#about">About Us</a></li>
                 <li><a href="#testimonials">Testimonials</a></li>
                 <li><a href="#geolocation">Geolocation</a></li>
                 <li><a href="#contact">Contact</a></li>
@@ -84,7 +84,7 @@
                     <li>Customer lead generation tools</li>
                     <li>Email marketing campaign support</li>
                 </ul>
-                <p>Car Salesman Plan</p>
+                <p>Basic Car Seller Plan</p>
             </div>
 
             <!-- Premium Plan -->
@@ -98,7 +98,7 @@
                     <li>Priority customer support</li>
                     <li>Monthly performance reviews</li>
                 </ul>
-                <p>Car Salesman Plan</p>
+                <p>Premium Car Seller Plan</p>
             </div>
 
             <!-- Enterprise Plan -->
@@ -113,7 +113,7 @@
                     <li>Advanced reporting & analytics</li>
                     <li>Dedicated account manager</li>
                 </ul>
-                <p>Dealership Plan</p>
+                <p>Dealership Seller Plan</p>
             </div>
         </div>
     </section>
@@ -138,10 +138,10 @@
                 <h3>Los Angeles</h3>
             </div>
             <div class="city">
-                <h3>Chicago</h3>
+                <h3>Toronto</h3>
             </div>
             <div class="city">
-                <h3>Houston</h3>
+                <h3>Vancouver</h3>
             </div>
             <div class="city">
                 <h3>Miami</h3>
@@ -175,9 +175,8 @@
             </div>
 
             <div class="socials">
-                <a href="https://www.facebook.com/profile.php?id=61556391490154&sk=about"><img src="https://upload.wikimedia.org/wikipedia/commons/6/6c/Facebook_Logo_2023.png" alt="Facebook"></a>
                 <a href="https://www.instagram.com/buralehandco/?hl=en"><img src="https://static.vecteezy.com/system/resources/previews/017/743/717/non_2x/instagram-icon-logo-free-png.png" alt="Instagram"></a>
-                <a href="https://www.linkedin.com/in/abdikarimburaleh/"><img src="https://freepnglogo.com/images/all_img/1715491568linkedin-icon-png.png" alt="LinkedIn"></a>
+                
             </div>
 
             <div class="footer-links">
