--- a/index.html
+++ b/index.html
@@ -71,7 +71,8 @@
     <!-- Pricing Section -->
     <section id="pricing" class="section">
         <h1>Pricing Plans</h1>
-        <p>Choose the plan that best suits your car sales business, whether you're located in Canada or the USA. Each package is designed to help you sell more cars through targeted marketing, SEO, and more.</p>
+        <p>Choose the plan that best suits your car sales business, whether you're located in Canada or the USA. 
+            Each package is designed to help you sell more cars through targeted marketing, SEO, and more.</p>
 
         <div class="pricing-plans">
             <!-- Basic Plan -->
