--- a/index.html
+++ b/index.html
@@ -26,7 +26,6 @@
 
     <!-- Video Section -->
     <div id="video-container" style="position: relative; width: 100%; height: 100vh;">
-        <!-- YouTube Video -->
         <iframe 
             id="bg-video"
             src="https://www.youtube.com/embed/t9-cMiEDNyk?autoplay=1&mute=1&loop=1&playlist=t9-cMiEDNyk&start=30&controls=0&modestbranding=1&rel=0" 
@@ -35,8 +34,6 @@
             allowfullscreen 
             style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; object-fit: cover;">
         </iframe>
-
-        <!-- Transparent Overlay to block mouse interaction -->
         <div id="video-overlay" style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; background: transparent; z-index: 2;"></div>
     </div>
 
@@ -51,8 +48,18 @@
         <h1>What Our Clients in Canada and the USA are Saying</h1>
         <div class="testimonials-carousel-container">
             <div class="testimonials-slider">
-                <!-- Example of localized testimonials -->
                 <div class="testimonial">
+                    <p>"Buraleh & Co's targeted marketing helped us sell our cars faster than ever!"</p>
+                    <p>- John Doe, Toronto</p>
+                </div>
+                <div class="testimonial">
+                    <p>"We saw an incredible increase in leads after using their services."</p>
+                    <p>- Jane Smith, Los Angeles</p>
+                </div>
+                <div class="testimonial">
+                    <p>"Their geolocation targeting made all the difference in reaching the right buyers."</p>
+                    <p>- Alex Turner, Miami</p>
+                </div>
             </div>
         </div>
     </section>
@@ -66,11 +73,8 @@
     <!-- Pricing Section -->
     <section id="pricing" class="section">
         <h1>Pricing Plans</h1>
-        <p>Choose the plan that best suits your car sales business, whether you're located in Canada or the USA. 
-            Each package is designed to help you sell more cars through targeted marketing, SEO, and more.</p>
-
+        <p>Choose the plan that best suits your car sales business, whether you're located in Canada or the USA. Each package is designed to help you sell more cars through targeted marketing, SEO, and more.</p>
         <div class="pricing-plans">
-            <!-- Basic Plan -->
             <div class="pricing-plan">
                 <h2>Basic</h2>
                 <p class="price">$500 USD/month (or $650 CAD/month)</p>
@@ -82,8 +86,6 @@
                 </ul>
                 <p>Basic Car Seller Plan</p>
             </div>
-
-            <!-- Premium Plan -->
             <div class="pricing-plan">
                 <h2>Premium</h2>
                 <p class="price">$1000 USD/month (or $1300 CAD/month)</p>
@@ -96,8 +98,6 @@
                 </ul>
                 <p>Premium Car Seller Plan</p>
             </div>
-
-            <!-- Enterprise Plan -->
             <div class="pricing-plan">
                 <h2>Enterprise</h2>
                 <p class="price">Custom Pricing</p>
@@ -118,34 +118,50 @@
     <section id="car-makes-sold" class="section">
         <h1>Car Makes Sold Across Canada & USA</h1>
         <div class="car-makes-carousel-container">
-            <div class="car-makes-slider"></div>
+            <div class="car-makes-slider">
+                <div class="car-make">
+                    <img src="car-make1.jpg" alt="BMW">
+                    <h3>BMW</h3>
+                </div>
+                <div class="car-make">
+                    <img src="car-make2.jpg" alt="Audi">
+                    <h3>Audi</h3>
+                </div>
+                <div class="car-make">
+                    <img src="car-make3.jpg" alt="Mercedes-Benz">
+                    <h3>Mercedes-Benz</h3>
+                </div>
+                <div class="car-make">
+                    <img src="car-make4.jpg" alt="Lexus">
+                    <h3>Lexus</h3>
+                </div>
+            </div>
         </div>
     </section>
 
-  <!-- Cities Carousel Section -->
-<section id="cities" class="section">
-    <h2>Our Service Cities</h2>
-    <div class="cities-carousel-container">
-        <div class="cities-slider">
-            <div class="city">
-                <h3>New York</h3>
-            </div>
-            <div class="city">
-                <h3>Los Angeles</h3>
-            </div>
-            <div class="city">
-                <h3>Toronto</h3>
-            </div>
-            <div class="city">
-                <h3>Vancouver</h3>
-            </div>
-            <div class="city">
-                <h3>Miami</h3>
+    <!-- Cities Carousel Section -->
+    <section id="cities" class="section">
+        <h2>Our Service Cities</h2>
+        <div class="cities-carousel-container">
+            <div class="cities-slider">
+                <div class="city">
+                    <h3>New York</h3>
+                </div>
+                <div class="city">
+                    <h3>Los Angeles</h3>
+                </div>
+                <div class="city">
+                    <h3>Toronto</h3>
+                </div>
+                <div class="city">
+                    <h3>Vancouver</h3>
+                </div>
+                <div class="city">
+                    <h3>Miami</h3>
+                </div>
             </div>
         </div>
-    </div>
-</section>
-
+    </section>
 
     <!-- Contact Section -->
     <section id="contact" class="section">
@@ -169,18 +185,14 @@
                     <button type="submit" id="newsletterSubmit">Subscribe</button>
                 </form>
             </div>
-
             <div class="socials">
                 <a href="https://www.instagram.com/buralehandco/?hl=en"><img src="https://static.vecteezy.com/system/resources/previews/017/743/717/non_2x/instagram-icon-logo-free-png.png" alt="Instagram"></a>
-                
             </div>
-
             <div class="footer-links">
                 <a href="privacy-policy.html" target="_blank">Privacy Policy</a> | 
                 <a href="terms-conditions.html" target="_blank">Terms & Conditions</a> | 
                 <a href="faq.html" target="_blank">FAQ</a>
             </div>
-
             <p>&copy; 2024 Buraleh & Co. All Rights Reserved.</p>
         </div>
     </footer>
