--- a/index.html
+++ b/index.html
@@ -115,29 +115,15 @@
     </section>
 
     <!-- Car Makes Sold Section -->
-    <section id="car-makes-sold" class="section">
-        <h1>Car Makes Sold Across Canada & USA</h1>
-        <div class="car-makes-carousel-container">
-            <div class="car-makes-slider">
-                <div class="car-make">
-                    <img src="car-make1.jpg" alt="BMW">
-                    <h3>BMW</h3>
-                </div>
-                <div class="car-make">
-                    <img src="car-make2.jpg" alt="Audi">
-                    <h3>Audi</h3>
-                </div>
-                <div class="car-make">
-                    <img src="car-make3.jpg" alt="Mercedes-Benz">
-                    <h3>Mercedes-Benz</h3>
-                </div>
-                <div class="car-make">
-                    <img src="car-make4.jpg" alt="Lexus">
-                    <h3>Lexus</h3>
-                </div>
-            </div>
+<section id="car-makes-sold" class="section">
+    <h1>Car Makes Sold Across Canada & USA</h1>
+    <div class="car-makes-carousel-container">
+        <div class="car-makes-slider" id="carMakesSlider">
+            <!-- Car makes will be populated here by JavaScript -->
         </div>
-    </section>
+    </div>
+</section>
+
 
     <!-- Cities Carousel Section -->
     <section id="cities" class="section">
